# cursor-rules

./: .gitignore  .lint-mdc.sh  .pre-commit-config.yaml  CLAUDE.md  IMPROVEMENTS.md  LIBRARY_EXPLORER_PLAN.md  README.md  cursor_rules_config.json  pyproject.toml  tool_registry.json
.claude/: settings.local.json
.claude/commands/: exe-parallel.md  simple-init-parallel.md
.cursor/: README.md
.cursor/rules/backend/: backend.mdc  containers.mdc  database.mdc  mcp.mdc  python.mdc
.cursor/rules/cloud/: aws.mdc
.cursor/rules/core/: core.mdc
.cursor/rules/docs/: design_spec.mdc  markdown.mdc  prd.mdc
.cursor/rules/domains/backend/: containers.mdc  database.mdc  python.mdc  sf_dev.mdc
.cursor/rules/domains/cloud/: aws.mdc
.cursor/rules/domains/core/: core.mdc
.cursor/rules/domains/docs/: design_spec.mdc  markdown.mdc  prd.mdc  salesforce_documentation.mdc
.cursor/rules/domains/frontend/: typescript.mdc
.cursor/rules/domains/martech/: marketing_analytics.mdc
.cursor/rules/frontend/: typescript.mdc
.cursor/rules/martech/: marketing_analytics.mdc
.cursor/rules/roles/: cmo.mdc  cto.mdc  data_analyst.mdc
.cursor/rules/roles/executive/: cto.mdc  director_marketing.mdc  principal_talent_architect.mdc  seo_director.mdc
.cursor/rules/roles/specialist/: content_strategy_specialist.mdc  data_analyst.mdc  data_engineer.mdc  qa_lead.mdc  salesforce_architect.mdc  security.mdc  senior_data_engineer.mdc  senior_magento_php_developer.mdc  seo_data_analyst.mdc  technical_seo_manager.mdc
.cursor/rules/tools/: role_library.json  tool_registry.json
docs/: role_creation_guide.md
library_explorer/: cli.py
library_explorer/data/: loader.py  models.py  validator.py
scripts/: SCRIPTS_OVERVIEW.md  __init__.py  create_domain_rule.py  create_role.py  lint_mdc.py  lint_role_library.py  lint_tool_registry.py  migrate_roles.py  role_library.json  setup.py  tool_registry.json  validate_domains.py
scripts/backup/: BACKUP_MANAGEMENT.md  role_library.json.backup
scripts/common/: __init__.py  config.py
scripts/domains/: DOMAIN_SCRIPTS_GUIDE.md  __init__.py  create_domain_rule.py  validate_domains.py
scripts/roles/: ROLE_SCRIPTS_GUIDE.md  create_role.py  create_role_v2.py  lint_role_library.py  migrate_roles.py  role_template.json
scripts/templates/: specialist_role.mdc.template
scripts/tools/: TOOL_REGISTRY_GUIDE.md  lint_tool_registry.py
scripts/validation/: VALIDATION_GUIDE.md  lint_mdc.py
templates/: TEMPLATES_GUIDE.md
templates/domains/: DOMAIN_CREATION_GUIDE.md  domain_creation_template.json  domain_rule.mdc.template  enhanced_domain_rule.mdc.template  example_domain_override.json
templates/roles/: executive_role.mdc.template  specialist_role.mdc.template
templates/tools/: README.md
tests/: conftest.py  test_create_domain_rule.py  test_create_role.py  test_lint_mdc.py  test_lint_role_library.py  test_lint_tool_registry.py  test_role_factory.py  test_validate_domains.py
tests/library_explorer/: test_cli.py  test_loader.py  test_validator.py
