[project]
name = "cursor-rules"
version = "0.1.0"
description = "Cursor Rules and Role Factory for AI-powered development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.ruff]
# Exclude non-Python files from linting
exclude = [
    "*.mdc",
    "*.md", 
    "*.template",
    ".cursor/",
    "templates/",
    "__pycache__",
    ".git",
    ".venv",
]

[tool.ruff.lint]
# Enable specific rule categories
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4"]
ignore = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use 4 spaces for indentation  
indent-style = "space"
